@@ -11,16 +11,18 @@ import com.nps.exception.RequestException;
 import com.nps.exception.ResourceNotFoundException;
 import com.nps.question.entity.Question;
 import com.nps.question.persistence.QuestionRepository;
+import com.nps.question.utils.ValidateFirstAnswer;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@AllArgsConstructor
 public class AnswerService {
 
     @Autowired
@@ -32,6 +34,9 @@ public class AnswerService {
     @Autowired
     private AnswerCustomRepository customRepository;
 
+    @Autowired
+    private ValidateFirstAnswer validate;
+
     public static final String ANSWER_DOES_NOT_EXIST = "Answer does not exist.";
 
     public static final String QUESTION_NOT_FOUND = "Question not found with id: ";
@@ -39,18 +44,31 @@ public class AnswerService {
     public AnswerResponse registerAnswer(AnswerForm form) {
         try {
             Optional<Question> question = questionRepository.findById(form.getQuestionId());
-            if (question.isPresent()) {
-                Answer answer = AnswerMapper.fromFormToEntity(form);
-                return AnswerResponseMapper.fromEntityToResponse(repository.save(answer));
+            if (question.isEmpty()) {
+                throw new ResourceNotFoundException(QUESTION_NOT_FOUND + form.getQuestionId());
             }
-            throw new ResourceNotFoundException(QUESTION_NOT_FOUND + form.getQuestionId());
-        } catch (NullPointerException e) {
-            log.error("Every answer must have a score.");
-            throw new RequestException("Every answer must have a score.");
+            validate.validateFirstAnswer(form, question.get());
+            Answer answer = AnswerMapper.fromFormToEntity(form);
+            if (form.getScore() == null) {
+                throw new NullPointerException("Every answer must not have a null score.");
+            }
+            if (answer.getResponse() == null || answer.getResponse().equals("")) {
+                answer.setResponse("");
+            }
+            repository.save(answer);
+            return AnswerResponseMapper.fromEntityToResponse(answer);
+
+        } catch (RequestException e) {
+            log.info(e.getMessage());
+            throw new RequestException(e.getMessage());
 
         } catch (ResourceNotFoundException e) {
             log.info(QUESTION_NOT_FOUND + form.getQuestionId());
             throw new ResourceNotFoundException(QUESTION_NOT_FOUND + form.getQuestionId());
+
+        } catch (NullPointerException e) {
+            log.error("Every answer must not have a null core.");
+            throw new RequestException("Every answer must not have a null score.");
 
         } catch (Exception e) {
             log.error("Error when registering answer.");
@@ -63,7 +81,7 @@ public class AnswerService {
             return customRepository.findAnswer(id, response, score, questionId)
                     .stream()
                     .map(AnswerResponseMapper::fromEntityToResponse)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             log.info(e.getMessage());
             throw new RequestException("Error when getting answers.");
